[tool.dagster]
module_name = "dagstertut"

[tool.poetry]
name = "dagstertut"
version = "0.1.0"
description = "Tutorial to understand how dagster works"
authors = ["Charlie Kruczko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.4.12"
dagster-webserver = "^1.4.12"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
sqlalchemy = "^2.0.20"
pytest = "^7.4.2"
requests = "^2.31.0"
dagster-duckdb = "^0.20.12"
dagster-duckdb-pandas = "^0.20.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
